[package]
name = "sylvia-router"
version = "0.3.13"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "A simple router application with full Sylvia-IoT core components."
edition = "2024"
keywords = ["iot", "router"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
axum = "0.8.7"
axum-prometheus = "0.9.0"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
clap = { version = "4.5.53", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
ipnet = "2.11.0"
json5 = "0.4.1"
log = "0.4.28"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
shell-escape = "0.1.5"
sylvia-iot-auth = { path = "../sylvia-iot-auth" }
sylvia-iot-broker = { path = "../sylvia-iot-broker" }
sylvia-iot-corelib = { path = "../sylvia-iot-corelib" }
sylvia-iot-coremgr = { path = "../sylvia-iot-coremgr" }
sylvia-iot-coremgr-cli = { path = "../sylvia-iot-coremgr-cli" }
sylvia-iot-data = { path = "../sylvia-iot-data" }
sylvia-iot-sdk = { path = "../sylvia-iot-sdk" }
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower = "0.5.2"
tower-http = { version = "0.6.7", default-features = false, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
] }

[profile.release]
codegen-units = 1
lto = true
strip = true
