[package]
name = "sylvia-router"
version = "0.4.2"
authors = ["Chien-Hong Chan"]
categories = ["web-programming::http-server"]
description = "A simple router application with full Sylvia-IoT core components."
edition = "2024"
keywords = ["iot", "router"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/woofdogtw/sylvia-iot-core.git"
rust-version = "1.88.0"

[dependencies]
axum = "0.8.8"
axum-prometheus = "0.10.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chrono = { version = "0.4.43", default-features = false, features = ["serde"] }
clap = { version = "4.5.57", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
] }
ipnet = "2.11.0"
json5 = "1.3.0"
log = "0.4.29"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
] }
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
shell-escape = "0.1.5"
sylvia-iot-auth = "0.4.2"
sylvia-iot-broker = "0.4.2"
sylvia-iot-corelib = "0.4.2"
sylvia-iot-coremgr = "0.4.2"
sylvia-iot-coremgr-cli = "0.4.2"
sylvia-iot-data = "0.4.2"
sylvia-iot-sdk = "0.4.2"
sysinfo = "0.38.0"
tokio = { version = "1.49.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "time",
] }
tower = "0.5.3"
tower-http = { version = "0.6.8", default-features = false, features = [
    "cors",
    "fs",
    "normalize-path",
    "timeout",
] }

[profile.release]
codegen-units = 1
lto = true
strip = true
